[gd_scene load_steps=8 format=3 uid="uid://bv33cg87ycahb"]

[ext_resource type="Script" path="res://info_board/info_board.gd" id="1_bhwf4"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_406up"]
height = 4.0
radius = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k8wgg"]
albedo_color = Color(0.277528, 0.277528, 0.277528, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_an6pb"]
material = SubResource("StandardMaterial3D_k8wgg")
top_radius = 0.25
height = 0.1
radial_segments = 8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v441e"]
shading_mode = 0
albedo_color = Color(0, 0.372549, 1, 1)

[sub_resource type="QuadMesh" id="QuadMesh_avpcm"]
material = SubResource("StandardMaterial3D_v441e")

[sub_resource type="BoxShape3D" id="BoxShape3D_braxi"]
size = Vector3(3, 3, 0.5)

[node name="InfoBoard" type="Area3D"]
script = ExtResource("1_bhwf4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("CylinderShape3D_406up")

[node name="base" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
mesh = SubResource("CylinderMesh_an6pb")
skeleton = NodePath("")

[node name="screen" type="MeshInstance3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 2, 0, 0, 0, 1, 0, 2, 0)
mesh = SubResource("QuadMesh_avpcm")
skeleton = NodePath("")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="colision" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="colision"]
shape = SubResource("BoxShape3D_braxi")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_top = 421.0
offset_right = 1160.0
offset_bottom = 654.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
